cleanup: remove the executor from the Reconciler constructor (#4336)