@@ -1,6 +1,6 @@
 package ai.verta.modeldb.reconcilers;
 
-import ai.verta.modeldb.common.futures.FutureExecutor;
+import ai.verta.modeldb.common.futures.Future;
 import ai.verta.modeldb.common.futures.FutureJdbi;
 import ai.verta.modeldb.common.reconcilers.ReconcileResult;
 import ai.verta.modeldb.common.reconcilers.Reconciler;
@@ -12,20 +12,18 @@ import java.util.AbstractMap;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-public class UpdateRepositoryTimestampReconcile
+public class UpdateRepositoryTimestampReconciler
     extends Reconciler<AbstractMap.SimpleEntry<Long, Long>> {
 
   private final MDBConfig mdbConfig;
 
-  public UpdateRepositoryTimestampReconcile(
+  public UpdateRepositoryTimestampReconciler(
       ReconcilerConfig config,
       FutureJdbi futureJdbi,
-      FutureExecutor executor,
       MDBConfig mdbConfig,
       OpenTelemetry openTelemetry) {
-    super(config, futureJdbi, executor, openTelemetry, false);
+    super(config, futureJdbi, openTelemetry, false);
     this.mdbConfig = mdbConfig;
   }
 
@@ -75,24 +73,22 @@ public class UpdateRepositoryTimestampReconcile
       throws Exception {
     logger.debug(
         "Reconciling update timestamp for repositories: "
-            + updatedMaxDateMap.stream()
-                .map(AbstractMap.SimpleEntry::getKey)
-                .collect(Collectors.toList()));
-    return InternalFuture.fromFuture(
-            futureJdbi.run(
-                handle -> {
-                  var updateDatasetTimestampQuery =
-                      "UPDATE repository SET date_updated = :updatedDate, version_number=(version_number + 1) WHERE id = :id";
+            + updatedMaxDateMap.stream().map(AbstractMap.SimpleEntry::getKey).toList());
+    return futureJdbi
+        .run(
+            handle -> {
+              var updateDatasetTimestampQuery =
+                  "UPDATE repository SET date_updated = :updatedDate, version_number=(version_number + 1) WHERE id = :id";
 
-                  for (SimpleEntry<Long, Long> updatedRecord : updatedMaxDateMap) {
-                    long id = updatedRecord.getKey();
-                    long updatedDate = updatedRecord.getValue();
-                    try (var updateQuery = handle.createUpdate(updateDatasetTimestampQuery)) {
-                      updateQuery.bind("id", id).bind("updatedDate", updatedDate).execute();
-                    }
-                  }
-                }))
-        .thenApply(unused -> new ReconcileResult(), executor)
+              for (SimpleEntry<Long, Long> updatedRecord : updatedMaxDateMap) {
+                long id = updatedRecord.getKey();
+                long updatedDate = updatedRecord.getValue();
+                try (var updateQuery = handle.createUpdate(updateDatasetTimestampQuery)) {
+                  updateQuery.bind("id", id).bind("updatedDate", updatedDate).execute();
+                }
+              }
+            })
+        .thenSupply(() -> Future.of(new ReconcileResult()))
         .blockAndGet();
   }
 }
